<resources>
    <string name="app_name">NVBite</string>
    <string name="skip">Skip</string>
    <string name="Des_food">Snap a picture of your food, and the system\nwill identify its category and estimate its\ncarbon emissions</string>
    <string name="des_app">An app by seven students to promote food sustainability by tracking carbon emissions.</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="historis">Log and track carbon emissions from various food items.</string>
    <string name="history">History</string>
    <string name="mapsdes">Easily Share Your Surplus Food with Pick Drop Maps</string>
    <string name="pick_drop">Pick Drop</string>
    <string name="skip_buttom">Skip</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="food_dsetect">Snap a picture of your food, and the system will identify its category and estimate its carbon emissions.</string>
    <string name="food">Food Detector</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="judul">NV Bite</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_maps">Maps</string>
    <string name="title_eco_food">Eco-Friendly Food</string>
    <string name="title_result">Result</string>
    <string name="welcome_home">Welcome,</string>
    <string name="quote_home">Take Your Small Step to Save The Planet</string>
    <string name="analyze_your_food_home">Analyze Your Food</string>
    <string name="scan_here">Scan Here</string>
    <string name="read_more">Read More</string>
    <string name="save_your_world_home">Save Your World</string>
    <string name="upload">Upload</string>
    <string name="scan_camera">Scan</string>
    <string name="drop_point_result">Drop Point</string>
    <string name="logout">Logout</string>
</resources>