<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.NVBite.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.NVBite.ui.home.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_result"
            app:destination="@id/navigation_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.NVBite.ui.home.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.NVBite.ui.home.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.NVBite.ui.home.ui.result.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="detectImageRespone"
            app:argType="com.example.NVBite.data.models.DetectImageResponse" />
        <argument
            android:name="imageFile"
            app:argType="java.io.Serializable" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_maps"
            app:destination="@id/navigation_maps" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.NVBite.ui.home.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_eco_food"
        android:name="com.example.NVBite.ui.home.ui.ecofood.EcoFoodFragment"
        android:label="@string/title_eco_food"
        tools:layout="@layout/fragment_eco_food" />
</navigation>