<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Gambar pojok kiri -->
    <ImageView
        android:id="@+id/cornerImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/gambar1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-17dp" />

    <!-- Logo Food Detector -->
    <ImageView
        android:id="@+id/foodDetectorIcon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@id/cornerImage"
        android:layout_marginTop="8dp"
        android:src="@drawable/gambar3"
        android:layout_centerHorizontal="true" />

    <!-- Text Food Detector -->
    <TextView
        android:id="@+id/foodDetectorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/foodDetectorIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- Deskripsi Food Detector -->
    <TextView
        android:id="@+id/foodDetectorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_dsetect"
        android:textColor="@color/lightGray"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_below="@id/foodDetectorTitle"
        android:layout_marginTop="4dp"/>

    <!-- Ikon Pick Drop dan History -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        android:layout_below="@id/foodDetectorDescription">

        <!-- Pick Drop Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pickDropIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/gambar5" />

            <TextView
                android:id="@+id/mapsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pick_drop"
                android:textColor="@color/lightGray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mapsDescription"
                android:layout_width="165dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/mapsdes"
                android:textColor="@color/lightGray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- History Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/historyIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/gambar4" />

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history"
                android:textColor="@color/lightGray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/historyDescription"
                android:layout_width="165dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/historis"
                android:textColor="@color/lightGray"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>