<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_profile_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/dummy_profile" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/btn_add_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/layout_profile_iv"
                app:layout_constraintStart_toEndOf="@id/layout_profile_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="386dp"
                android:layout_height="48dp"
                android:layout_below="@id/titleLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape"
                android:hint="@string/name"
                android:focusable="false"
                android:inputType="none"
                android:minHeight="12dp"
                android:padding="12dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="386dp"
                android:layout_height="48dp"
                android:layout_below="@id/titleLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape"
                android:hint="@string/phone"
                android:focusable="false"
                android:inputType="none"
                android:minHeight="12dp"
                android:padding="12dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="386dp"
                android:layout_height="48dp"
                android:layout_below="@id/titleLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape"
                android:hint="@string/email"
                android:focusable="false"
                android:inputType="none"
                android:minHeight="12dp"
                android:padding="12dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="386dp"
                android:layout_height="48dp"
                android:layout_below="@id/titleLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape"
                android:hint="@string/password"
                android:focusable="false"
                android:inputType="none"
                android:minHeight="12dp"
                android:padding="12dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="32dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="100dp" />

    </LinearLayout>
</ScrollView>