<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Gambar pojok kiri -->
        <ImageView
            android:id="@+id/cornerImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="-17dp"
            android:src="@drawable/gambar1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back" />

        <!-- Logo Aplikasi -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/gambar2" />

        <!-- Title Login -->
        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleLogin"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="386dp"
            android:layout_height="48dp"
            android:layout_below="@id/te"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="12dp"
            android:padding="12dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="386dp"
            android:layout_height="48dp"
            android:layout_below="@id/tp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="12dp"
            android:padding="12dp"
            android:textColor="@color/black" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="174dp"
            android:layout_height="49dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn"
            android:backgroundTint="@color/darkGreen"
            android:minHeight="48dp"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Don't Have Account -->
            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dontHaveAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>